--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^1.0.3",
     "multer": "^1.4.4",
-    "pg": "^8.7.1",
+    "pg": "^8.7.3",
     "socket.io": "^4.4.0"
   },
   "devDependencies": {
