--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1085.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "pg": "^8.7.3",
     "socket.io": "^4.4.0"
   },
