--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
     "heroku-postbuild": "npm install --production"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1085.0",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -25,7 +26,9 @@
     "socket.io": "^4.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.4"
   },
   "description": ""
 }
